--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^11.1.0"
+  },
+  "devDependencies": {
+    "airbnb": "0.0.2",
+    "eslint": "^6.5.1",
+    "nodemon": "^1.19.4"
   }
 }
