--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-router-dom": "^5.1.2",
     "typescript": "^3.6.4",
     "validator": "^11.1.0"
   },
